--- a/index.html
+++ b/index.html
@@ -4,46 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajándék Szavazás</title>
-    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Válaszd ki az ajándékot!</h1>
     <div class="cards">
         <div class="card" id="telefon">
+            <img src="img/telefon.jfif" alt="Telefon">
             <h2>Telefon</h2>
         </div>
         <div class="card" id="zokni">
+            <img src="img/zokni.jfif" alt="Pár zokni">
             <h2>Pár zokni</h2>
         </div>
         <div class="card" id="gamer_gep">
+            <img src="img/gamer_gep.jfif" alt="Gamer gép">
             <h2>Gamer gép</h2>
         </div>
         <div class="card" id="kis_teso">
+            <img src="img/kis_teso.jfif" alt="Kis tesó">
             <h2>Kis tesó</h2>
         </div>
         <div class="card" id="lego">
-            <h2>Lego</h2>
+            <img src="img/lego.jfif" alt="LEGO">
+            <h2>LEGO</h2>
         </div>
         <div class="card" id="motor">
+            <img src="img/motor.jfif" alt="Motor">
             <h2>Motor</h2>
         </div>
         <div class="card" id="tv">
-            <h2>Tv</h2>
+            <img src="img/tv.jfif" alt="TV">
+            <h2>TV</h2>
         </div>
         <div class="card" id="auto">
+            <img src="img/auto.jfif" alt="Autó">
             <h2>Autó</h2>
         </div>
         <div class="card" id="mikro">
+            <img src="img/mikro.jfif" alt="Mikro">
             <h2>Mikro</h2>
         </div>
         <div class="card" id="gitar">
+            <img src="img/gitar.jfif" alt="Gitár">
             <h2>Gitár</h2>
         </div>
         <div class="card" id="fejhallgato">
+            <img src="img/fejhallgato.jfif" alt="Fejhallgató">
             <h2>Fejhallgató</h2>
         </div>
         <div class="card" id="laptop">
+            <img src="img/laptop.jfif" alt="Laptop">
             <h2>Laptop</h2>
         </div>
     </div>
@@ -51,9 +62,6 @@
     <div class="eredmeny">
         <h2>Eredmény</h2>
         <p id="nyertes">A nyertes ajándék: <span id="eredmeny-ajandek">Még nincs eldöntve</span></p>
-    </div>
-    <div class="kep">
-        <img src="img/letöltés.jfif" alt="">
     </div>
     <script src="app.js"></script>
 </body>
