--- a/index.html
+++ b/index.html
@@ -12,50 +12,62 @@
         <div class="card" id="telefon">
             <img src="img/telefon.jfif" alt="Telefon">
             <h2>Telefon</h2>
+            <p id="szavazat-telefon">Szavazatok: 0</p>
         </div>
         <div class="card" id="zokni">
             <img src="img/zokni.jfif" alt="Pár zokni">
             <h2>Pár zokni</h2>
+            <p id="szavazat-zokni">Szavazatok: 0</p>
         </div>
         <div class="card" id="gamer_gep">
             <img src="img/gamer_gep.jfif" alt="Gamer gép">
             <h2>Gamer gép</h2>
+            <p id="szavazat-gamer_gep">Szavazatok: 0</p>
         </div>
         <div class="card" id="kis_teso">
             <img src="img/kis_teso.jfif" alt="Kis tesó">
             <h2>Kis tesó</h2>
+            <p id="szavazat-kis_teso">Szavazatok: 0</p>
         </div>
         <div class="card" id="lego">
             <img src="img/lego.jfif" alt="LEGO">
             <h2>LEGO</h2>
+            <p id="szavazat-lego">Szavazatok: 0</p>
         </div>
         <div class="card" id="motor">
             <img src="img/motor.jfif" alt="Motor">
             <h2>Motor</h2>
+            <p id="szavazat-motor">Szavazatok: 0</p>
         </div>
         <div class="card" id="tv">
             <img src="img/tv.jfif" alt="TV">
             <h2>TV</h2>
+            <p id="szavazat-tv">Szavazatok: 0</p>
         </div>
         <div class="card" id="auto">
             <img src="img/auto.jfif" alt="Autó">
             <h2>Autó</h2>
+            <p id="szavazat-auto">Szavazatok: 0</p>
         </div>
         <div class="card" id="mikro">
             <img src="img/mikro.jfif" alt="Mikro">
             <h2>Mikro</h2>
+            <p id="szavazat-mikro">Szavazatok: 0</p>
         </div>
         <div class="card" id="gitar">
             <img src="img/gitar.jfif" alt="Gitár">
             <h2>Gitár</h2>
+            <p id="szavazat-gitar">Szavazatok: 0</p>
         </div>
         <div class="card" id="fejhallgato">
             <img src="img/fejhallgato.jfif" alt="Fejhallgató">
             <h2>Fejhallgató</h2>
+            <p id="szavazat-fejhallgato">Szavazatok: 0</p>
         </div>
         <div class="card" id="laptop">
             <img src="img/laptop.jfif" alt="Laptop">
             <h2>Laptop</h2>
+            <p id="szavazat-laptop">Szavazatok: 0</p>
         </div>
     </div>
     <button class="result-button" onclick="mutatEredmeny()">Végeredmény</button>
