--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Válaszd ki az ajándékot!</h1>
-    <div class="cards">
+    <div class="cards" id="cards">
         <div class="card" id="telefon">
             <img src="img/telefon.jfif" alt="Telefon">
             <h2>Telefon</h2>
@@ -82,6 +82,14 @@
             <p id="szavazat-laptop">Szavazatok: 0</p>
         </div>
     </div>
+
+    <div class="add-gift">
+        <h2>Új ajándék hozzáadása</h2>
+        <input type="text" id="new-gift-name" placeholder="Ajándék neve">
+        <input type="text" id="new-gift-image" placeholder="Kép URL">
+        <button onclick="addGift()">Hozzáad</button>
+    </div>
+
     <h2 id="eredmeny">A nyertes ajándék: <span id="eredmeny-ajandek">Még nincs eldöntve</span></h2>
     <script src="app.js"></script>
 </body>
